--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -15,6 +15,8 @@ Grey dark 2: #777
 Grey dark 3: #999
 
 */
+
+//esentially same as html selector, but with higher specificity
 :root {
   --color-primary: #eb2f64;
   --color-primary-light: #ff3366;
@@ -23,29 +25,40 @@ Grey dark 3: #999
   --color-grey-light-2: #;
   --color-grey-light-3: #f0eeee;
   --color-grey-light-4: #ccc;
+
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999; }
+  --color-grey-dark-3: #999;
+}
 
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 *,
 *::after,
 *::before {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 62.5%; //1rem = 10px, 10px/16px
+}
 
 body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   line-height: 1.6rem;
   color: var(--color-grey-dark-2);
-  background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
+  background-image: linear-gradient(
+    to right bottom,
+    var(--color-primary-light),
+    var(--color-primary-dark)
+  );
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 100vh; }
+
+  min-height: 100vh;
+}
