--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -30,8 +30,14 @@ Grey dark 3: #999
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
 
-  --shadow-dark: 0 2rem 6rem rgba(0,0,0, 0.3);
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+
+  --line: 1px solid var(--color-grey-light-1);
 }
+
+$bp-largest: 75em; //1200px
+$bp-large: 68.75em; //1100px
 
 * {
   margin: 0;
@@ -47,6 +53,10 @@ Grey dark 3: #999
 html {
   box-sizing: border-box;
   font-size: 62.5%; //1rem = 10px, 10px/16px
+
+  @media screen and (max-width: $bp-large) {
+    font-size: 50%; //1rem = 8px
+  }
 }
 
 body {
