--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -181,120 +181,340 @@
   color: var(--color-grey-light-4);
 }
 
-
 //////////////////////////////
 //GALLERY
 
 .gallery {
-    display: flex;
-    &__photo {
-        width: 100%;
-        display: block;//prevent small space
-        // underneat an image when it is an inline element like line height 
-
-    }
+  display: flex;
+  &__photo {
+    width: 100%;
+    display: block; //prevent small space
+    // underneat an image when it is an inline element like line height
+  }
 }
 
 //////////////////////////////
 //HOTEL OVERVIEW
 
 .overview {
+  display: flex;
+  border-bottom: var(--line);
+  align-items: center;
+
+  &__heading {
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem;
+  }
+
+  &__stars {
+    // flex: 1;
+    margin-right: auto;
     display: flex;
-    border-bottom:1px solid var(--color-grey-light-1);
+  }
+
+  &__icon-star,
+  &__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary);
+  }
+
+  &__location {
+    font-size: 1.2rem;
+    display: flex;
     align-items: center;
+  }
 
-    &__heading{
-        font-size: 2.25rem;
-        font-weight: 300;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        padding: 1.5rem 3rem;
-    }
+  &__icon-location {
+    margin-right: 0.5rem;
+  }
+  &__rating {
+    color: #fff;
+    background-color: var(--color-primary);
+    margin-left: 3rem;
+    align-self: stretch;
+    padding: 0 2.25rem;
 
-    &__stars {
-        // flex: 1;
-        margin-right: auto;
-        display: flex;
-    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
-    &__icon-star, 
-    &__icon-location {
-        width: 1.75rem;
-        height: 1.75rem;
-        fill: var(--color-primary);
-    }
+  &__rating-average {
+    font-size: 2.25rem;
+    font-weight: 300;
+    margin-bottom: -3px;
+  }
 
-    &__location {
-        font-size: 1.2rem;
-        display: flex;
-        align-items: center;
-    }
-
-    &__icon-location {
-        margin-right: .5rem;
-    }
-    &__rating {
-        color: #fff;
-        background-color: var(--color-primary);
-        margin-left: 3rem;
-        align-self: stretch;
-        padding: 0 2.25rem;
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    &__rating-average{
-        font-size: 2.25rem;
-        font-weight: 300;
-        margin-bottom: -3px;
-    }
-
-    &__rating-count {
-        font-size: .8rem;
-        text-transform: uppercase;
-    }
+  &__rating-count {
+    font-size: 0.8rem;
+    text-transform: uppercase;
+  }
 }
 
 ///////////////////
 // BUTTON INLINE
 
-.btn-inline{
-    border: none;
-    color: var(--color-primary);
-    font-size: inherit;
-    border-bottom: 1px solid currentColor;
-    padding-bottom: 2px;
-    display: inline-block;
-    background-color: transparent;
-    cursor: pointer;
-    transition: all .2s;
+.btn-inline {
+  border: none;
+  color: var(--color-primary);
+  font-size: inherit;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  display: inline-block;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all 0.2s;
 
-    &:hover{
-        color: var(--color-grey-dark-1);
-    }
+  & span {
+    margin-left: 3px;
+    transition: margin-left 0.2s;
+  }
 
-    &:focus {
-        outline: none;
-        animation: pulsate 1s infinite;
+  &:hover {
+    color: var(--color-grey-dark-1);
+
+    span {
+      margin-left: 8px;
     }
+  }
+
+  &:focus {
+    outline: none;
+    animation: pulsate 1s infinite;
+  }
 }
 
-
 @keyframes pulsate {
-    0%{
-        transform: scale(1);
-        box-shadow: none;
-    }
-    50%{
-        transform: scale(1.05);
-        box-shadow: 0 1rem 4rem rgba(0,0,0, .25);
-    }
+  0% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
+  }
 
-    100%{
-        transform: scale(1);
-        box-shadow: none;
+  100% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+}
+
+///////////////////
+// PARAGRAPH
+.paragraph {
+  &:not(:last-of-type) {
+    margin-bottom: 2rem;
+  }
+}
+
+///////////////////
+// LIST
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
+
+  display: flex;
+  flex-wrap: wrap;
+
+  &__item {
+    flex: 0 0 50%;
+    margin-bottom: 0.7rem;
+  }
+
+  &__item::before {
+    content: "";
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+    margin-right: 0.7rem;
+
+    //   //for older browsers where mask property doesn't apply
+    //   background-image: url(../img/chevron-thin-right.svg);
+    //   background-size: cover;
+
+    //Newer browsers - masks
+    background-color: var(--color-primary);
+    -webkit-mask-image: url(../img/chevron-thin-right.svg);
+    mask-image: url(../img/chevron-thin-right.svg);
+    -webkit-mask-size: cover;
+    mask-size: cover;
+  }
+}
+
+///////////////////
+// RECOMMEND
+.recommend {
+  font-size: 1.3rem;
+  color: var(--color-grey-dark-3);
+  display: flex;
+  align-items: center;
+
+  &__count {
+    margin-right: auto;
+  }
+
+  &__friends {
+  }
+
+  &__photo {
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: 3px solid #fff;
+
+    &:not(:last-child) {
+      margin-right: -2rem;
     }
+  }
+}
+
+///////////////////
+// REVIEWS
+
+.review {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+  overflow: hidden;
+
+  &__text {
+    position: relative;
+    margin-bottom: 2rem;
+    z-index: 10;
+  }
+  &__user {
+    display: flex;
+    align-items: center;
+  }
+
+  &__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem;
+  }
+
+  &__user-box {
+    margin-right: auto;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-around;
+    align-self: stretch;
+  }
+
+  &__user-name {
+    font-size: 1.1rem;
+    font-weight: 600;
+    margin-bottom: 0.4rem;
+    text-transform: uppercase;
+  }
+
+  &__user-date {
+    font-size: 1rem;
+    color: var(--color-grey-dark-3);
+  }
+
+  &__rating {
+    font-size: 2.2rem;
+    font-weight: 300;
+    color: var(--color-primary);
+  }
+
+  &::before {
+    content: "\201C";
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    font-size: 20rem;
+    color: var(--color-grey-light-2);
+    font-family: sans-serif;
+    line-height: 1;
+    z-index: 1;
+  }
+}
+
+///////////////////
+// CTA
+
+.cta {
+  padding: 3.5rem 0;
+  text-align: center;
+
+  &__book-now {
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: 300;
+    margin-bottom: 2.5rem;
+  }
+}
+
+///////////////////
+// BUTTON
+
+.btn {
+  font-size: 1.5rem;
+  border: none;
+  font-weight: 300;
+  text-transform: uppercase;
+  border-radius: 100px;
+  background-image: linear-gradient(
+    to right,
+    var(--color-primary-light),
+    var(--color-primary-dark)
+  );
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+
+  & > * {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    transition: all 0.2s;
+  }
+
+  &__visible {
+    padding: 2rem 7.5rem;
+  }
+
+  &__invisible {
+    position: absolute;
+    left: 0;
+    top: -100%;
+    padding: 2rem;
+  }
+
+  &:hover {
+    background-image: linear-gradient(
+        to left,
+        var(--color-primary-light),
+        var(--color-primary-dark)
+      );
+  }
+
+  &:hover &__invisible {
+    top: 0;
+  }
+
+  &:hover &__visible {
+    transform: translateY(100%);
+  }
+
+  &:focus {
+      outline: none;
+      animation: pulsate 1s infinite;
+  }
 }
