--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,12 +4,18 @@
     background-color: var(--color-grey-light-2);
     box-shadow: var(--shadow-dark);
     min-height: 50rem;
+
+    @media only screen and (max-width: $bp-largest) {
+        margin: 0;
+        max-width: 100%;
+        width: 100%;
+    }
 }
 
 .header {
     height: 7rem;
     background-color: #fff;
-    border-bottom:1px solid var(--color-grey-light-1);
+    border-bottom:var(--line);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,6 +38,29 @@
     background-color: #fff;
     flex: 1;
 
-    //FOR TESTING
-    height: 80rem;
+}
+
+
+.detail {
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-1);
+    border-bottom: var(--line);
+    font-size: 1.4rem;
+}
+.description {
+    font-size: 1.4rem;
+    flex: 0 0 60%; //when using percentage for flex basis
+    //the flex grow and shrink can be 0;
+    margin-right: 4.5rem;
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+}
+
+.user-reviews {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
